--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,13 @@
             <version>2.4.4</version>
         </dependency>
 
+        <!-- Model mapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
