--- a/src/main/resources/application-william.properties
+++ b/src/main/resources/application-william.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysql.stud.ntnu.no}:3306/nwlie_sysut?serverTimezone=UTC
+spring.datasource.username=nwlie_user1
+spring.datasource.password=root
