--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </properties>
 
     <dependencies>
-        <!-- startup  -->
+        <!-- Startup  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -40,7 +40,7 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- security -->
+        <!-- Security -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-api</artifactId>
@@ -65,11 +65,11 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- database setup -->
+        <!-- Database setup -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.16</version>
+            <version>8.0.32</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -83,7 +83,7 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
-        <!-- swagger dependencies -->
+        <!-- Swagger  -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
@@ -96,11 +96,19 @@
             <version>2.0.4</version>
         </dependency>
 
-        <!-- lombok dependencies -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+
+        </dependency>
+
+        <!-- Model mapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version>
         </dependency>
 
     </dependencies>
