--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- <dependency>
+         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency> -->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,11 +59,11 @@
             <version>0.11.5</version>
         </dependency>
 
-         <!-- <dependency>
+         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
-        </dependency> -->
+        </dependency>
 
         <!-- Database setup -->
         <dependency>
