--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://mysql-ait.stud.idi.ntnu.no:3306/edvarso
-spring.datasource.username=edvarso
-spring.datasource.password=5Tm9UfCjx
+spring.datasource.url=jdbc:mysql://mysql-ait.stud.idi.ntnu.no:3306/karofm
+spring.datasource.username=karofm
+spring.datasource.password=hohe.DD7j
