Set up H2 database for tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+#application.properties
 #spring framework logging
 logging.level.org.springframework=ERROR
 
@@ -10,10 +10,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${url}
 spring.datasource.username=${username}
 spring.datasource.password=${password}
-#spring.jpa.show-sql: true
+
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 server.port=8080
 
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
 
