--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,13 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+
+        </dependency>
+
         <!-- Swagger  -->
         <dependency>
             <groupId>org.springdoc</groupId>
