Edited .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: maven:latest
 stages:          
   - build
   - test
+  - package
 
 build:
   stage: build
@@ -21,3 +22,14 @@ test:
   script:
     - echo "Running tests"
     - mvn clean test
+
+pages:
+  stage: package
+  script:
+    - echo "Building Javadoc"
+    - mvn javadoc:javadoc
+  artifacts:
+    paths:
+      - public/javadoc
+  only:
+    - web
