--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.springframework=ERROR
 #local application logging
 logging.level.com.packetpub.restapp=INFO
 logging.level.org.springframework.security=DEBUG
-spring.profiles.active=karo
+spring.profiles.active=central
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${url}
 spring.datasource.username=${username}
