Deleted and changed some properties files, and added readme image

--- a/src/main/resources/application-central.properties
+++ b/src/main/resources/application-central.properties
@@ -1,3 +1,8 @@
-spring.datasource.url=jdbc:mysql://mysql-ait.stud.idi.ntnu.no:3306/karofm
-spring.datasource.username=karofm
-spring.datasource.password=hohe.DD7j
+spring.datasource.url=INSERT URL
+spring.datasource.username=INSERT USERNAME
+spring.datasource.password=INSERT PASSWORD
+
+
+
+
+
